--- a/index.html
+++ b/index.html
@@ -131,28 +131,14 @@
  </ul>
  
  <p>That might seem like a lot, but that's only because the bar has been set so low over the last 50 years. Most of the above is achievable with an adequate plan and enough people supporting it.</p>
- <p>The only thing we need to solve all of these crises is better policy</p>
- <p>and the only thing we need to do to get better policy is to encourage independent, ambitious policy thinkers to run for office, and get them elected.</p>
+ <p>The only thing we need to solve all of these crises is better policy<br>
+ and the only thing we need to do to get better policy is to encourage independent, ambitious policy thinkers to run for office, and get them elected.</p>
  <p>We need to elect people who will think and speak independently about better policy and better politics; who are passionate about doing that, capable of doing it, and free to do it; who can collaborate positively with everyone else in parliament across party lines to help get good policy through parliament, while maintaining the freedom to independently advocate for their electorate, and who will use the platform of parliament to support the movement towards a better way of doing politics in Australia.</p>
  <p>It's not just about how the candidate is going to vote in parliament or whether they will be in government or hold the balance of power.</p>
- <p>It's about how the candidate will use the platform of being a member of parliament to hold the government accountable. It's about how willing the candidate is to advocate for better policy in a way that appeals to the whole political spectrum. An independent politician can even use the prerogative of being a politician in the state parliament to advocate for the things that we need at the federal level. But most of all, it's about the message that you will send to the houses of parliament and to Australia by voting for that candidate. Do you want a country where politicians are rewarded just for toeing the party line and being good at campaigning, which will not solve the crises that we are facing, or do you want a country where politicians are passionate about the policy work that's necessary to solve all of these crises and have the independence and the integrity to do the job they are elected to do and pursue the interests of their electorate.</p>
- <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail that they've written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
- <p>Candidates don't need to be perfect at policy. Nobody is. Policy is not a precise science. You don't need to agree with all of a candidate's policies. Most people aren't even interested in policy and that's OK. You don't need to read every detail. But at the very least, you need to know that the details are there, and that the details are theirs. You need to know that they are making their own policy decisions for their own electorate, because that's their job, and if we don't elect political candidates who have demonstrated that they are committed to doing that job and free to do that job, they won't, and that's why they aren't.</p>
-
- <p>This website contains over 7000 words of policy discussion including over 5000 words of my own policy suggestions, and I don't expect most of you to read all of that.</p>
-
- <p>In the end, all of the above crises could be solved with just one policy if it were implemented well enough:</p>
- <ul>
-  <li>Ensure that any well-meaning person who wants to work in policy development is allowed fair involvement, and paid fairly if they want pay.</li>
- </ul>
-
- <p>In other words, if enough people including competent experts were adequately paid to work together on solving our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to encourage independent policy thinkers to run for office and get them elected.</p>
-
- <p>My policy suggestions are described in detail below for those who are interested in the details, to demonstrate my passion and my capabilities when it comes to thinking independently about policy and politics, to ensure accountability, to assist policy discussion with those who are interested and support further policy.</p>
-
- <p>But fundamentally voting for me is about sending a message.</p>
+ <p>It's about how the candidate will use the platform of being a member of parliament to hold the both state and federal governments accountable. It's about how willing the candidate is to advocate for better policy in a way that appeals to the whole political spectrum. But most of all, it's about the message that you will send to the houses of parliament and to Australia by voting for that candidate. Do you want to send the message that Australians are satisfied with our political parties and will vote for them no matter what, or do you want to send a message that Australians will support independents if political parties won't do better? The more support I get, and the more votes I get, the more encouraged deep policy thinkers will be to put themselves forward at the next federal and state elections, and the more accountable politicians and political parties will have to be to get elected.</p>
+ <p>Fundamentally voting for me is about sending a message.</p>
  
- <p>We need to send a message to the federal and state government and the corporate political parties, and we need to create a new type of politics in Australia. To do that, we need to support a movement of candidates that demonstrate <em>through their own policy suggestions and discussion</em> that they are putting their electorate's goals ahead of their party's agenda or any other agenda, and that they have the necessary policy skills, the necessary policy passion, and the necessary independence, to contribute substantially to solving our problems.</p>
+ <p>We need to send a message to the federal and state government and the corporate political parties, and we need to create a new type of politics in Australia. To do that, we need to support a movement of candidates that demonstrate <em>through their own policy suggestions and discussion</em> that they are putting their electorate's goals ahead of their party's agenda or any other agenda, and that they have the necessary policy passion, the necessary deep thinking, and the necessary independence, to contribute substantially to solving our problems.</p>
 
  <p>There are three crucial components to my plan:</p>
  <ol>
@@ -162,7 +148,7 @@
  </ol>
  
  <p>Together we can send a message to both federal and state governments that if they won't do their job well enough, we'll elect someone who will. At the same time, we can send a message to independent policy thinkers in the community that we will support them if they run for office. Together, these two messages will result in a government that is much more accountable, that tries much harder to solve our problems, and has the necessary policy skills to do so.</p>
- <p>Sometimes it seems like most of our politicians and political parties aren't even trying. They play around the edges; throw a lot of money at problems without solving their causes; choose policies that mitigate some problems while making other problems worse, or throw a lot of money at things that don't address any problems at all. Sometimes they choose a hopeless political strategy to boot, and for almost all political parties it's a divisive strategy.</p>
+ <p>Sometimes it seems like most of our politicians and political parties aren't even trying. They play around the edges; throw a lot of money at problems without solving their causes; choose policies that mitigate some problems while making other problems worse, or throw a lot of money at things that barely address any problems at all. Sometimes they choose a hopeless political strategy to boot, and for almost all political parties it's a divisive strategy.</p>
  <p>My plan involves a comprehensive set of policy solutions, respect for the whole community, and a pragmatic strategy to support a democratic political movement beyond our own electorate here in Waite, and beyond state politics, to influence politics for the better at the federal and international levels. We need better policies and we need a better way of doing politics. If I'm elected, I'll use the platform of state parliament to do my part in both.</p>
  <p>By the election in March next year, I'll get my plan across to as many people in Waite as I can, and I could use your support.</p>
  <p>Following me on social media or video platforms so that you can see my videos and perhaps even share them around would be a great help. So would sharing this website with whoever you think might be interested.</p>
@@ -172,6 +158,29 @@
  Alec Gargett
  </p>
  </section>
+
+ <section id="whydetail" class="content-section responsive-width">
+ <h2>Why so much policy detail</h2>
+ <p>This website contains over 7000 words of policy discussion including thousands of words of my own policy suggestions, and I don't expect most of you to read all of that.</p>
+ <p>My policy suggestions are described in detail below</p>
+ <ul>
+  <li>for those who are interested in the details</li>
+  <li>to demonstrate my passion and my capabilities when it comes to thinking independently about policy and politics</li>
+  <li>to ensure accountability</li>
+  <li>to assist policy discussion with those who are interested</li>
+  <li>to support further policy development</li>
+ </ul>
+ <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail that they've written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
+ <p>Candidates don't need to be perfect at policy. Nobody is. Policy is not a precise science. You don't need to agree with all of a candidate's policies. Most people aren't even interested in policy and that's OK. You don't need to read every detail. But at the very least, you need to know that the details are there, and that the details are theirs. You need to know that they are making their own policy decisions for their own electorate, because that's their job, and if we don't elect political candidates who have demonstrated that they are committed to doing that job and free to do that job, they won't, and that's why they aren't.</p>
+
+ <p>In the end, all of the above crises could be solved with just one policy if it were implemented well enough:</p>
+ <ul>
+  <li>Ensure that anyone who can help to solve the crises is encouraged to do so and fairly paid if they want pay. As part of that, ensure that any well-meaning person who wants to work in policy development is allowed fair involvement.</li>
+ </ul>
+
+ <p>In other words, if enough people including competent experts were adequately paid to work together on solving our problems, they would solve our problems. But ensuring this is implemented well enough requires voters to take action to encourage independent policy thinkers to run for office and get them elected.</p>
+
+ 
 
 <section id="qualityoflifecrisis" class="content-section responsive-width">
  <h2>The Quality of Life Crisis</h2>
@@ -257,7 +266,7 @@
              <li><a href="#17.2_Spending_Cap">Tighten the cap on candidate spending</a> (17.2)</li>
              <li><a href="#17.3_Campaigning_Ban">Ban political campaigning at polling booths</a> (17.3)</li>
              <li><a href="#17.4_Address_End">End the requirement for some political candidates to publish their private home address</a> (17.4)</li>
-             <li><a href="17.5_Electorate_statistics">Gather and publish data on what each South Australian state electorate wants from government (17.5)</li>
+             <li><a href="17.5_Electorate_statistics">Gather and publish data on what each South Australian state electorate wants from government</a> (17.5)</li>
          </ul>
      </li>
      <li>
