--- a/index.html
+++ b/index.html
@@ -136,13 +136,13 @@
  <p>We need to elect people who will think and speak independently about better policy and better politics; who are passionate about doing that, capable of doing it, and free to do it; who can collaborate positively with everyone else in parliament across party lines to help get good policy through parliament, while maintaining the freedom to independently advocate for their electorate, and who will use the platform of parliament to support the movement towards a better way of doing politics in Australia.</p>
  <p>It's not just about how the candidate is going to vote in parliament or whether they will be in government or hold the balance of power.</p>
  <p>It's about how the candidate will use the platform of being a member of parliament to hold both state and federal governments accountable. It's about how willing the candidate is to advocate for better policy in a way that appeals to the whole political spectrum. But most of all, it's about the message that you will send to the houses of parliament and to Australia by voting for that candidate. Do you want to send the message that Australians are satisfied with our political parties and will vote for them no matter what, or do you want to send a message that Australians will support independents if political parties won't do better? The more support I get, and the more votes I get, the more encouraged deep policy thinkers will be to put themselves forward at the next federal and state elections, and the more accountable politicians and political parties will have to be to get elected.</p>
- <p>Fundamentally voting for me is about sending a message.</p>
+ <p>Fundamentally, voting for me is about sending a message.</p>
  
  <p>We need to send a message to the federal and state government and the corporate political parties, and we need to create a new type of politics in Australia. To do that, we need to support a movement of candidates that demonstrate <em>through their own policy suggestions and discussion</em> that they are putting their electorate's goals ahead of their party's agenda or any other agenda, and that they have the necessary policy passion, the necessary deep thinking, and the necessary independence, to contribute substantially to solving our problems.</p>
 
  <p>There are three crucial components to my plan:</p>
  <ol>
-  <li>Ambitious policy solutions to all of the crises above, which are detailed below and will continue to be improved further over time, including through feedback from the electorate;</li>
+  <li>Ambitious policy solutions to all of the crises above, which are detailed below and will be improved further over time, including through feedback from the electorate;</li>
   <li>An ambitious plan to change the way politics is done in Australia for the better;</li>
   <li>A viable and simple political strategy: to draw positive attention to these ideas in a non-partisan way.</li>
  </ol>
@@ -151,7 +151,7 @@
  <p>Sometimes it seems like most of our politicians and political parties aren't even trying. They play around the edges; throw a lot of money at problems without solving their causes; choose policies that mitigate some problems while making other problems worse, or throw a lot of money at things that barely address any problems at all. Sometimes they choose a hopeless political strategy to boot, and for almost all political parties it's a divisive strategy.</p>
  <p>My plan involves a comprehensive set of policy solutions, respect for the whole community, and a pragmatic strategy to support a democratic political movement beyond our own electorate here in Waite, and beyond state politics, to influence politics for the better at the federal and international levels. We need better policies and we need a better way of doing politics. If I'm elected, I'll use the platform of state parliament to do my part in both.</p>
  <p>By the election in March next year, I'll get my plan across to as many people in Waite as I can, and I could use your support.</p>
- <p>Following me on social media or video platforms so that you can see my videos and perhaps even share them around would be a great help. So would sharing this website with whoever you think might be interested.</p>
+ <p>If you follow me on social media or video platforms  you can see my videos and perhaps even share them around. This would be a great help, as would sharing this website with whoever you think might be interested.</p>
  <p>
  Best wishes,
  <br>
@@ -160,7 +160,7 @@
  </section>
 
  <section id="whydetail" class="content-section responsive-width">
- <h2>Why so much policy detail</h2>
+ <h2>Why so much policy detail?</h2>
  <p>This website contains over 7000 words of policy discussion including thousands of words of my own policy suggestions, and I don't expect most of you to read all of that.</p>
  <p>My policy suggestions are described in detail below</p>
  <ul>
@@ -170,7 +170,7 @@
   <li>to assist policy discussion with those who are interested</li>
   <li>to support further policy development</li>
  </ul>
- <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail that they've written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
+ <p>Ideally, a political candidate should be passionate enough about policy to publish thousands of words of their own policy detail they have written themselves on their own initiative. Electing politicians who are committed to doing that and free to do that is the only way to ensure accountable, passionate, competent and dynamic policy development.</p>
  <p>Candidates don't need to be perfect at policy. Nobody is. Policy is not a precise science. You don't need to agree with all of a candidate's policies. Most people aren't even interested in policy and that's OK. You don't need to read every detail. But at the very least, you need to know that the details are there, and that the details are theirs. You need to know that they are making their own policy decisions for their own electorate, because that's their job, and if we don't elect political candidates who have demonstrated that they are committed to doing that job and free to do that job, they won't, and that's why they aren't.</p>
 
  <p>In the end, all of the above crises could be solved with just one policy if it were implemented well enough:</p>
@@ -461,7 +461,7 @@
 
 <p>Support reducing the rate of immigration while opposing racism, opposing the mistreatment of immigrants and opposing reduction in the refugee intake.</p>
 
-<p>The left are currently empowering racist, xenophobic, anti-progressive anti-science politicians by rejecting the more valid concerns and democratic rights of voters when it comes to immigration. During the COVID border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short-term effects. In the long-term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow due to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
+<p>The left are currently empowering racist, xenophobic, anti-progressive, anti-science politicians by rejecting the more valid concerns and democratic rights of voters when it comes to immigration. During the COVID border closures, rents became cheaper. When businesses opened back up again, but international borders were still shut, unemployment dropped to the lowest rate in 50 years. And these are only the short-term effects. In the long-term, the quality of housing we are living in will continue to get worse if the population density in our cities continues to grow due to an intake of millions per decade, the rate that corporations and their political parties have chosen. It also increasingly makes it hard to solve other problems: harder to build enough public transport and eliminate traffic congestion and transport pollution, harder to reduce harm to our environment and animals through land use, resource use, production, construction and consumption.</p>
 
 <p>The South Australian Employment Service (SAEC) detailed above will reduce reliance on skilled immigration. Training underemployed and undertrained Australians and providing more paid work experience opportunities will negate the need for bringing so many skilled visa holders into South Australia. We can address almost all of our real skills shortages locally, not only through tertiary education, but also through government-supported and business-supported apprenticeships, other on-the-job training, and other paid work experience opportunities, for people who are already here, rather than bringing additional people in from interstate and overseas to compensate for our lack of proper training systems and job experience opportunities.</p>
 
@@ -535,7 +535,7 @@
   <small>(15.0_Belair_Train)</small>
  </h4>
 
- <p>Currently trains going in opposite directions share the same track on the Belair line and have to wait for each other to pass. Reduce this issue by duplicating the track wherever feasible. Once these works are done, electrify the line. Once these upgrades are complete, expand the Belair train line to Mount Barker.</p>
+ <p>Currently, trains going in opposite directions share the same track on the Belair line and have to wait for each other to pass. Reduce this issue by duplicating the track wherever feasible. Once these works are done, electrify the line. Once these upgrades are complete, expand the Belair train line to Mount Barker.</p>
 
  <h4 id="16.0_Affordable_Options">Make environmentally friendly choices more affordable<br>
   <small>(16.0_Affordable_Options)</small>
