--- a/index.html
+++ b/index.html
@@ -529,7 +529,7 @@
   <li>14.4.5 Extend Labor's home battery scheme to vehicle-to-home (V2H) chargers, so that people can use their EV battery as a home battery.</li>
  </ul>
 
- <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas pollution, and less than 20% in Australia, so it is essential that South Australia demonstrate to the whole world how to eliminate pollution in other sectors in a way that provides maximum benefit to the state.</p>
+ <p>South Australia gets about 80% of our electricity from renewables, which puts us second after Tasmania, and first when it comes to solar and wind combined. In fact, when it comes to solar and wind combined, we are ahead of every country in the world, and ahead of every state in the United States. This puts us in a unique position to lead the entire world when it comes to addressing the other two biggest pollution sectors: transport and agriculture. Electricity production makes up less than 40% of global greenhouse gas pollution, and less than 20% in Australia, so it is essential that South Australia demonstrates to the whole world how to eliminate pollution in other sectors in a way that provides maximum benefit to the state.</p>
 
  <h4 id="15.0_Belair_Train">Improve the Belair train line<br>
   <small>(15.0_Belair_Train)</small>
@@ -646,6 +646,10 @@
 
  <p>I will always support measures to prevent cruelty and violence, and will look for areas where I can get support from other members of parliament. This includes cruelty and violence towards all animals.</p>
 
+ <h3>Upcoming policy</h3>
+
+ <p>Although this is more detail than any other state-level political party or independent candidate that I'm aware of, I have even more detail to come, including how to improve our political system, and how to improve the government's regulation of social media.</p>
+
 </section> <!-- /policy -->
 
 <section id="essays" class="content-section responsive-width">
@@ -721,13 +725,10 @@ We also need to address what is fundamentally broken in our major parties. If a 
 </section> --> <!-- about -->
 
 <section id="contact" class="content-section responsive-width">
-<h3>Explaining my policies and my strategy in more detail</h3>
-
- <p>My policies will be explained in more detail here and on other platforms like Facebook, Youtube and Instagram between now and the election in March next year.</p>
 
  <iframe width="381" height="677" src="https://www.youtube.com/embed/G2Lg5Om-VMo" title="Announcing my campaign as an Independent for Waite #southaustralia #auspol" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
- <h4 style="text-align: center;">Follow me and see upcoming videos about my plan:</h4>
+ <h4 style="text-align: center;">Please follow me to support me, see updates on my campaign, and see more videos explaining my plan:</h4>
 <div class="social-links">
  <a href="https://www.facebook.com/profile.php?id=61582618821078" target="_blank" rel="noopener noreferrer" aria-label="Follow Alec on Facebook">
   <svg viewBox="0 0 24 24" role="img" aria-hidden="true"><path d="M22 12c0-5.52-4.48-10-10-10S2 6.48 2 12c0 4.84 3.44 8.87 8 9.8V15H8v-3h2V9.5C10 7.57 11.57 6 13.5 6H16v3h-2c-.55 0-1 .45-1 1v2h3v3h-3v6.95c5.05-.5 9-4.76 9-9.95z"/></svg>
@@ -746,7 +747,7 @@ We also need to address what is fundamentally broken in our major parties. If a 
  </a>
 </div>
  
- <p>Additional policies will also be announced by email to my newsletter subscribers. You can sign up to my newsletter by sending a blank email or an email introducing yourself. If you're interested in a face-to-face meeting or a phone call, please email me about that too.</p>
+ <p>If you have any questions or comments, or if you're interested in setting up a face-to-face meeting or a phone call, please email me.</p>
 
 <p class="contact-email">
  <strong>Email:</strong> <a href="mailto:alecgargett@gmail.com">alecgargett@gmail.com</a>
