--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
   </li>
   <li>
    <a href="#2.0_Assist_Buyers">Assist home buyers but regulate prices</a>
-   <ul class="sub-toc-list">
+   <ul class="sub-toc-list">s
    <a href="#2.0_Assist_Buyers">
-    <li><a href="#2.0_Assist_Buyers">Provide HECS-style loans to assist rightful residents to purchase at a regulated price</a> (2.0)</li>
+    <li><a href="#2.0_Assist_Buyers">Provide zero-interest or low-interest loans to assist rightful residents to purchase at a regulated price</a> (2.0)</li>
    </ul>
   </li>
   <li>
@@ -253,7 +253,7 @@
    </li>
   <h3><a href="#7.0_Efficiency_Loans">Cost of living and pollution</a></h3>
   <li>
-   <a href="#7.0_Efficiency_Loans">Provide HECS-style loans for efficiency upgrades including solar water heating and electrification</a>
+   <a href="#7.0_Efficiency_Loans">Provide zero-interest or low-interest loans for efficiency upgrades including solar water heating and electrification</a>
   </li>
   <li>
    <a href="#8.0_Cheap_Essentials">Provide cheap electricity and cheap healthy foods with government investment, regulation and compensation</a>
@@ -344,14 +344,14 @@
 <li>1.2 Incentivise or require wealthy property investors to offer their properties to any past residents in order of how long they have lived there, so that those with the greatest sentimental attachment to the property have the option to buy or rent the property at no more than the price limit.</li>
 <li>1.3 If there are no past residents who are interested in buying or renting the property at the offered price (no more than the price limit), the agency will determine which applicant it should be sold or rented to based on their degree of need.</li>
 
-<h4 id="2.0_Assist_Buyers">Provide HECS-style loans to assist the rightful resident at the regulated price<br>
+<h4 id="2.0_Assist_Buyers">Provide zero-interest or low-interest loans to assist the rightful resident at the regulated price<br>
  <small>(2.0_Assist_Buyers)</small>
 </h4>
 
-<p>Once the above policies are implemented, we can assist all prospective home owners by allowing HECS-style loans for the buyer.</p>
+<p>Once the above policies are implemented, we can assist all prospective home owners by allowing zero-interest or low-interest loans for the buyer.</p>
 <p>My policies will prevent this from inflating housing prices further for two reasons:</p>
  <ul>
-  <li>Firstly, the HECS-style loan will be no greater than necessary to allow the buyer to make up the difference in their buying power to the designated price limit, and only the designated buyer will get access to this loan;</li>
+  <li>Firstly, the loan will be no greater than necessary to allow the buyer to make up the difference in their buying power to the designated price limit, and only the designated buyer will get access to this loan;</li>
   <li>Secondly, due to Policy 1 above, the property investor will be incentivised or required to sell to the rightful resident at this target price, rather than sell to someone else.</li>
  </ul>
 
@@ -417,11 +417,11 @@
 
 <p>Many of the crises in South Australia are due to underfunding from the federal government, who give our natural resources away to corporations without charging properly for them, fail to adequately tax billionaires and decamillionaires, and then fail to provide struggling states like South Australia with adequate funding for our desperately failing services. I use the platform of state parliament to call on the federal government to fund struggling states like South Australia properly. Even more importantly, voting for me will encourage other prospective independents to run at the federal election with similar policies.</p>
 
-<h4 id="7.0_Efficiency_Loans">Provide HECS-style loans for efficiency upgrades and electrification<br>
+<h4 id="7.0_Efficiency_Loans">Provide zero-interest or low-interest loans for efficiency upgrades and electrification<br>
  <small>(7.0_Efficiency_Loans)</small>
 </h4>
 
-<p>Provide HECS-style loans for purchases that reduce costs and increase efficiency such as purchasing electric cars, switching to electric heating, adding solar water heating, buying a vehicle-to-home inverter, or repainting a dark roof to a heat-reflecting white. This will be designed to avoid causing increases in prices, and even reduce prices, by providing only enough to make the difference up to a target price.</p>
+<p>Provide zero-interest or low-interest loans for purchases that reduce costs and increase efficiency such as purchasing electric cars, switching to electric heating, adding solar water heating, buying a vehicle-to-home inverter, or repainting a dark roof to a heat-reflecting white. This will be designed to avoid causing increases in prices, and even reduce prices, by providing only enough to make the difference up to a target price.</p>
 
 <h4 id="8.0_Cheap_Essentials">Provide cheap electricity and cheap healthy foods<br>
  <small>(8.0_Cheap_Essentials)</small>
@@ -523,7 +523,7 @@
  <p>14.4 Make it easier to buy an EV:</p>
  <ul>
   <li>14.4.1 Eliminate taxes on electric vehicle purchases;</li>
-  <li>14.4.2 Provide HECS-style loans for electric vehicle purchases under Policy 7.0_Efficiency_Loans;</li>
+  <li>14.4.2 Provide zero-interest or low-interest loans for electric vehicle purchases under Policy 7.0_Efficiency_Loans;</li>
   <li>14.4.3 Make charging stations free at times when there is an oversupply of electricity on the grid;</li>
   <li>14.4.4 Require an adequate number of charging stations in every parking area;</li>
   <li>14.4.5 Extend Labor's home battery scheme to vehicle-to-home (V2H) chargers, so that people can use their EV battery as a home battery.</li>
