--- a/index.html
+++ b/index.html
@@ -433,10 +433,12 @@
  <small>(9.0_QLC)</small>
 </h4>
 
-<p>Solve the cost of living crisis and the quality of life crisis, by creating a Cost of Living and Quality of Life Commission, which I will refer to here simply as the Quality of Life Commission. Give the Quality of Life Commission the power to:</p>
+<p>Solve the cost of living crisis and the quality of life crisis, by creating a Cost of Living and Quality of Life Commission, which I will refer to here simply as the Quality of Life Commission.</p>
+ 
+<p>Give the Quality of Life Commission the power to:</p>
 <ul>
  <li>9.1 Regulate against corporations and landlords contributing to the quality of life crisis;</li>
- <li>9.2 Charge those corporations and landlords for harmful, inflationary or otherwise costly behaviour;</li>
+ <li>9.2 Charge those corporations and landlords for harmful, inflationary or otherwise costly behaviour, advocating for constitutional reforms to facilitate this if necessary;</li>
  <li>9.3 Spend this revenue on reducing the cost of living and improving quality of life further. Advocate for constitutional reform that will allow us to further improve this commission by allowing it to implement its own variable charges.</li>
  <li>9.4 Audit government spending to ensure that there is no waste including private contractor rorts, so that this money can be better spent on cost of living measures.</li>
 </ul>
