--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@
  <p>We need to:</p>
  <ul>
   <li>13.1 Make SARDI independent from PIRSA and other government departments</li>
-  <li>13.2 Replace the current head of SARDI, Mike Steer, who has close ties to the farming industry, with someone who does not have close ties to industry and who will communicate honestly about the main causes of nutrient pollution in the gulf. According to the most recent federal report, this includes sewage water and agricultural runoff.</li>
+  <li>13.2 Reform the leadership of SARDI, which currently has close ties to the farming industry, to ensure independence from industrial lobbying and honest communication about the main causes of nutrient pollution in the gulf. According to the most recent federal report, this includes sewage water and agricultural runoff.</li>
   <li>13.3 Require SARDI to quantify all major sources of nutrient pollution in the gulf and investigate solutions. Such solutions may include:
    <ul>
     <li>13.3.1 Purify Adelaide's sewage water (like Perth does) so that the remaining high-nutrient sludge can be disposed of some other way;</li>
