--- a/index.html
+++ b/index.html
@@ -201,18 +201,18 @@
 
 <div id="policy-contents" class="policy-toc">
  <ol class="toc-list">
-  <h3><a href="#1.0_Regulate_Investment">Housing</a></h3>
+  <h3><a href="#1_Housing">Housing</a></h3>
   <li>
-   <a href="#1.0_Regulate_Investment">Regulate property investment</a>
+   <a href="#1.0_Assist_Buyers">Assist home buyers at regulated prices</a>
    <ul class="sub-toc-list">
-    <li><a href="#1.0_Regulate_Investment">Regulate who landlords and other investors must offer their properties to and how much they can charge</a> (1.0)</li>
+   <a href="#1.0_Assist_Buyers">
+    <li><a href="#1.0_Assist_Buyers">Provide zero-interest or low-interest loans to assist rightful residents to purchase at a regulated price</a> (2.0)</li>
    </ul>
   </li>
   <li>
-   <a href="#2.0_Assist_Buyers">Assist home buyers but regulate prices</a>
-   <ul class="sub-toc-list">s
-   <a href="#2.0_Assist_Buyers">
-    <li><a href="#2.0_Assist_Buyers">Provide zero-interest or low-interest loans to assist rightful residents to purchase at a regulated price</a> (2.0)</li>
+   <a href="#2.0_Regulate_Investment">Regulate large-portfolio land and housing investment</a>
+   <ul class="sub-toc-list">
+    <li><a href="#2.0_Regulate_Investment">Regulate who large-portfolio land and housing investors must offer their properties to and how much they can charge</a> (1.0)</li>
    </ul>
   </li>
   <li>
@@ -326,38 +326,54 @@
  </ol>
 </div>
 
-<h3 id="1.0_Regulate_Investment">Regulate property investment<br>
-</h3>
-
-<h4>Regulate who landlords and other investors must offer their properties to and how much they can charge<br>
- <small>(1.0_Regulate_Investment)</small>
-</h4>             
-<!-- Incentivise property investors to do the right thing, by charging them if they do the wrong thing. For example, property investors will be charged if they have evicted someone from their home just to sell the property to someone wealthier, or if they have otherwise failed to allow the property to be rented or purchased by the person or family with the greatest moral right to the property at a fair price. The Quality of Life Commission will be instructed to devise a system for determining and enforcing this. -->
-
-<p>We've all heard horror stories of landlords failing to properly upkeep their rental properties.</p>
-
-<p>We've also heard stories of long-term renters being kicked out of their home where they'd been living for years or decades, just so that the property can be sold to someone with more money, or rented out as an Airbnb. Most of us recognise this as an injustice, and it also incentivises investors owning a huge number of investment properties, which contributes to the housing crisis. It also indicates that legal property rights have become too disconnected from moral property rights, which causes other injustices and further contributes to the housing crisis.</p>
-
-<p>To solve both of these issues we can:</p>
-
-<li>1.1 Incentivise or require wealthy property investors with investment properties that are not recently acquired to pay for an assessment of any investment property by a dedicated government agency. This agency will then use this assessment to set a limit on the rent and the sale price, based on the property assessment and a democratically determined housing price growth limit.</li>
-<li>1.2 Incentivise or require wealthy property investors to offer their properties to any past residents in order of how long they have lived there, so that those with the greatest sentimental attachment to the property have the option to buy or rent the property at no more than the price limit.</li>
-<li>1.3 If there are no past residents who are interested in buying or renting the property at the offered price (no more than the price limit), the agency will determine which applicant it should be sold or rented to based on their degree of need.</li>
-
-<h4 id="2.0_Assist_Buyers">Provide zero-interest or low-interest loans to assist the rightful resident at the regulated price<br>
- <small>(2.0_Assist_Buyers)</small>
-</h4>
-
-<p>Once the above policies are implemented, we can assist all prospective home owners by allowing zero-interest or low-interest loans for the buyer.</p>
-<p>My policies will prevent this from inflating housing prices further for two reasons:</p>
- <ul>
-  <li>Firstly, the loan will be no greater than necessary to allow the buyer to make up the difference in their buying power to the designated price limit, and only the designated buyer will get access to this loan;</li>
-  <li>Secondly, due to Policy 1 above, the property investor will be incentivised or required to sell to the rightful resident at this target price, rather than sell to someone else.</li>
- </ul>
-
 <!-- <h4>Housing price growth limit</h4>
 
 <p>Democratically determine an upper limit on yearly housing price growth. The Quality of Life Commission will enforce this limit with regulations on property investments, explained in Policy below. The Quality of Life Commission will also devise a new housing price index that applies the constant quality principle including property size and location, to ensure that we are not only addressing the nominal cost of housing, but also improving the quality of housing that South Australians can afford.</p> -->
+
+<h3 id="1_Housing">Assist home buyers but counteract hyperinflation by regulating large-portfolio property investment<br>
+</h3>
+
+<p>Housing policies from our political parties threaten two opposite extremes:</p>
+
+<ul>
+ <li>One set of policies tries to assist buyers in ways that simply hyperinflate property prices and as a result fail to make housing more affordable</li>
+ <li>The other set of policies threatens to crash the housing market, which most voters won't accept</li>
+</ul>
+
+<p>The solution requires a comprehensive set of policies addressing and balancing all sides of the equation. My solution finds a balance between:</p>
+
+<ul>
+ <li>Providing government loan-assistance to home-buyers up to a regulated maximum price, ensuring that home-owners don't lose value on their primary residence</li>
+ <li>Regulating large-portfolio property and land investment, preventing hyperinflation and price gouging</li>
+</ul>
+
+<h4 id="1.0_Assist_Buyers">Provide zero-interest or low-interest loans to assist rightful residents at a regulated price<br>
+ <small>(1.0_Assist_Buyers)</small>
+</h4>
+
+<p>All prospective home owners by allowing zero-interest or low-interest loans for the buyer.</p>
+<p>My policies will prevent this from excessively inflating housing prices further for two reasons:</p>
+ <ul>
+  <li>Firstly, the loan will be no greater than necessary to allow the buyer to make up the difference in their buying power to a designated price limit, and only a designated buyer will get access to this loan;</li>
+  <li>Secondly, due to Policy 2 below, property investors will be incentivised or required to sell to the rightful resident at such a designated price, rather than sell to someone else, and this price limit will be stricter for large-portfolio investments than for a primary residence, as explaiend below.</li>
+ </ul>
+
+<h4>Regulate who large portfolio land and housing investors must offer their properties to and how much they can charge<br>
+ <small>(2.0_Regulate_Investment)</small>
+</h4>             
+<!-- Incentivise property investors to do the right thing, by charging them if they do the wrong thing. For example, property investors will be charged if they have evicted someone from their home just to sell the property to someone wealthier, or if they have otherwise failed to allow the property to be rented or purchased by the person or family with the greatest moral right to the property at a fair price. The Quality of Life Commission will be instructed to devise a system for determining and enforcing this. -->
+
+<p>We've all heard horror stories of renters failing to get the repairs and upkeep they need from their landlords.</p>
+
+<p>We've also heard stories of long-term renters being kicked out of their home where they'd been living for years or decades, just so that the property can be sold to someone with more money, or rented out as an Airbnb.</p>
+
+<p>Most of us recognise both of these examples as an injustice. The fact taht these unjustices are allowed also incentivises large-portfolio housing and land investment, which contributes to the housing crisis. Furthermore, both examples indicate that legal property rights have become too disconnected from moral property rights, which causes other injustices and further contributes to the housing crisis.</p>
+
+<p>To solve both of these issues we could:</p>
+
+<li>1.1 Require large-portfoliio land and housing investors to pay for an assessment of investment properties by a dedicated government agency. This agency will then use this assessment to set a limit on the rent and the sale price, based on the property assessment and a democratically determined housing price growth limit. This limit will be high enough to prevent housing prices from crashing, and allow home-owners to maintain the value on their primary residences, but low enough to prevent hyperinflation and price gouging by large portfolio investors.</li>
+<li>1.2 Incentivise or require wealthy property investors to offer their properties to any past residents in order of how long they have lived there, so that those with the greatest sentimental attachment to the property have the option to buy or rent the property at no more than the price limit.</li>
+<li>1.3 If there are no past residents who are interested in buying or renting the property at the offered price (no more than the price limit), the agency will determine which applicant it should be sold or rented to based on their degree of need.</li>
 
 <h4 id="3.0_Build_Better">Build housing the right way<br>
  <small>(3.0_Build_Better)</small>
