--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
  <small>(5.0_Resource_Pricing)</small>
 </h4>
 
-<p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for pennies is one of the biggest rorts in our history. Ideally, the Quality of Life Commission (detailed below) would directly charge whatever price maximises benefits for South Australians, but this may require constitutional reform. Until then, the Quality of Life Commission will instead recommend minimum resource prices to parliament, both for existing mines and separately as the reserve price when selling resources for new mines at auction. These resource sales will fund not only the Commission itself but all of the other policies below, including cost of living measures. Other environmentally costly international export industries may also be charged for those exports, where the Commission regards these charges as necessary to fund necessary policies, or otherwise beneficial to quality of life in Australia.</p>
+<p>Natural resources under the ground legally belong to the state, which means they belong to all South Australians. Giving away these resources to large corporations for pennies is one of the biggest rorts in our history. Ideally, the Quality of Life Commission (detailed below) would directly charge whatever price maximises benefits for South Australians, but this may require constitutional reform, or implementation at the federal level. Until then, the Quality of Life Commission will instead recommend minimum resource prices to parliament, both for existing mines and separately as the reserve price when selling resources for new mines at auction. These resource sales will fund not only the Commission itself but all of the other policies below, including cost of living measures. Other environmentally costly international export industries may also be charged for those exports, where the Commission regards these charges as necessary to fund necessary policies, or otherwise beneficial to quality of life in Australia.</p>
 
 <h4 id="6.0_Federal_Underfunding">Call out the federal government for failing to do the above and underfunding South Australia<br>
  <small>(6.0_Federal_Underfunding)</small>
@@ -454,8 +454,8 @@
 <p>Give the Quality of Life Commission the power to:</p>
 <ul>
  <li>9.1 Regulate against corporations and landlords contributing to the quality of life crisis;</li>
- <li>9.2 Charge those corporations and landlords for harmful, inflationary or otherwise costly behaviour, advocating for constitutional reforms to facilitate this if necessary;</li>
- <li>9.3 Spend this revenue on reducing the cost of living and improving quality of life further. Advocate for constitutional reform that will allow us to further improve this commission by allowing it to implement its own variable charges.</li>
+ <li>9.2 Charge those corporations and landlords for harmful, inflationary or otherwise costly behaviour, advocating for constitutional reform or federal implementation to facilitate this if necessary;</li>
+ <li>9.3 Spend this revenue on reducing the cost of living and improving quality of life further. Advocate for constitutional reform or federal implementation that will allow us to further improve this commission by allowing it to implement its own variable charges.</li>
  <li>9.4 Audit government spending to ensure that there is no waste including private contractor rorts, so that this money can be better spent on cost of living measures.</li>
 </ul>
 
