--- a/index.html
+++ b/index.html
@@ -490,9 +490,10 @@
 
 <p>One might think that there isn't much that can be done about this at the state parliament level, but we can do a lot:</p>
 <ul>
- <li>11.1 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here, as explained in Policy 10.0 above</li>
- <li>11.2 Reduce or cease state government requests for skilled visas from the federal government</li>
- <li>11.3 Use the platform of state parliament to call on the federal government to further reduce unnecessary visas</li>
+ <li>11.1 Reduce the need, demand, and excuses for skilled visas by providing adequate training and job placements for people already here, as explained in Policy 10.0 above.</li>
+ <li>11.2 Reduce or cease state government requests for skilled visas from the federal government.</li>
+ <li>11.3 Use the platform of state parliament to call on the federal government to further reduce unnecessary visas.</li>
+ <li>11.4 Use the platform of state parliament to advocate for constitutional reform, allowing state regulations of immigration of non-citizens to the state, in addition to federal regulations.</li>
 </ul>
 
 <h3>Policing</h3>
